# budget-app

./: .env.example  .gitignore  README  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/: services.py
backend/src/budget-api/: __init__.py
backend/src/budgeting/: __init__.py  configs.py  services.py
backend/src/budgeting/database/: __init__.py
backend/src/budgeting/database/alembic/: env.py
backend/src/budgeting/database/alembic/versions/: aced4622fb58_create_transactions_table.py  cc0cd0f35ccd_create_statements_table.py  f0f05de46aaf_drop_statements_table.py
backend/src/budgeting/domains/statement/: http.py  repository.py  service.py
backend/src/budgeting/domains/transaction/: __init__.py  http.py  models.py  repository.py  service.py  utils.py
backend/src/budgeting/statement/: http.py  models.py  repository.py  service.py
backend/test/: conftest.py
backend/test/fixtures/statements/: valid-credit-card-statement.csv
backend/test/unit/http/: test_upload_statement.py
backend/test/unit/statement/: conftest.py
backend/test/unit/statement/http/: test_upload_statement.py
backend/test/unit/statement/service/: test_parse_statement.py
frontend/: index.html  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/statements/: page.tsx
frontend/src/: App.js  Budgeting.tsx  main.tsx
frontend/src/components/Menu/: Menu.css  Menu.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/Statements/: Statements.tsx
terraform/: main.tf  output.tf  providers.tf  random.tf  variables.tf
(+2 files in other folders)
