[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budgeting"
version = "0.0.1"
dependencies = [
    "fastapi",
    "psycopg2",
    "pydantic",
    "pydantic_settings",
    "python-multipart",
    "SQLAlchemy",
    "uvicorn"
]

[project.optional-dependencies]
all = [
    "budgeting[dev]"
]
dev = [
    "alembic",
    "httpx",
    "pytest",
    "pytest-asyncio",    
]